--- a/dataset/green_onion_skeleton.yaml
+++ b/dataset/green_onion_skeleton.yaml
@@ -17,6 +17,8 @@ flip_idx: [0, 1, 2, 5, 6, 3, 4]
 names:
   0: green onion
 
+depth: False
+
 # Hyperparameters ------------------------------------------------------------------------------------------------------
 translate: 0.2  # image translation (+/- fraction)
 scale: 0.2  # image scale (+/- gain)
