--- a/exp/model_config/yolo11-pose-v2.yaml
+++ b/exp/model_config/yolo11-pose-v2.yaml
@@ -15,15 +15,15 @@ scales: # model compound scaling constants, i.e. 'model=yolo11n-pose.yaml' will 
 # YOLO11n backbone
 backbone:
   # [from, repeats, module, args]
-  - [-1, 1, Dformer, []] # 0-P1/2
-  - [-1, 1, SPPF, [256, 5]] # 9
-  - [-1, 2, C2PSA, [256]] # 10
+  - [-1, 1, DFormer, [[64, 128, 256, 512]]] # 0-P1/2
+  - [-1, 1, SPPF, [512, 5]] # 9
+  - [-1, 2, C2PSA, [512]] # 10
 
 # YOLO11n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 2], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, C3k2, [256, False]] # 13
+  - [-1, 2, C3k2, [512, False]] # 13
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 1], 1, Concat, [1]] # cat backbone P3
